--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="shortcut icon"href="ic.ico"type="image/x-icon"/>
 	<title>Home|M</title>
 	<style type="text/css">
 	*{
