--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ h2{
             {
 
 			 border:3px solid;
-			 margin: 250px 250px 0 250px;
+			 margin: 250px 250px 0 50px;
 			background-color: white;
 			opacity: 0.8;
 			 border-color:blue;
@@ -139,7 +139,7 @@ p{
 	<div style="border: 3px solid black;">
 		<ul >
 			<li><a href="ps.pdf">Resume</a></li>
-			<li><a href="">Contact me</a></li>
+			
 			<li><a href="">Home</a></li>
 		</ul>
 	</div>
@@ -219,6 +219,8 @@ if there is no way, I wil make it..</q>
 	</h2>
 
 </div>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br>
+<h5>to contact:</h5>
 <div class="border">
 	<center>
 <a href="tel:+91-9442897408" target=_blank><img src="ph.gif"></a>
