--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" charset="width=device-width, initial-scale=1.0" >
+	<link rel="shortcut icon"href="ps.png"type="image/x-icon"/>
 <head>
 	
-	<title>Home|M</title>
+	<title>Home|reennaP</title>
 	<style type="text/css">
 	*{
 		margin: 0;
