--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" charset="width=device-width, initial-scale=1.0" >
-	<link rel="shortcut icon"href="ps.png"type="image/x-icon"/>
+	<link rel="shortcut icon"href="teddy.png"type="image/x-icon"/>
 <head>
 	
 	<title>Home|reennaP</title>
